sc/source/core/tool/scmatrix.cxx
@@ -1380,7 +1380,7 @@ class CompareMatrixFunc : std::unary_function<MatrixImplType::element_block_type
 
     void compare()
     {
-        double fVal = sc::CompareFunc(mrComp.maCells[0], mrComp.maCells[1], mrComp.mbIgnoreCase, mpOptions);
+        double fVal = sc::CompareFunc( mrComp, mpOptions);
         maResValues.push_back(evaluate(fVal, mrComp.meOp));
     }
 
